--- a/src/components/AppHeader/index.css
+++ b/src/components/AppHeader/index.css
@@ -1,4 +1,4 @@
-.ant-menu-item .anticon,
+/* .ant-menu-item .anticon,
 .ant-menu-submenu-title .anticon {
   font-size: 20px;
 }
@@ -6,4 +6,8 @@
 .ant-menu-item .anticon + span,
 .ant-menu-submenu-title .anticon + span {
   font-size: 16.5px;
-}
+} */
+
+/* .ant-menu-horizontal {
+  line-height: 46px !important;
+} */
